Dibuat menggunakan Colab

--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -17,9 +17,9 @@
       },
       "source": [
         "# Proyek Analisis Data: [Input Nama Dataset]\n",
-        "- **Nama:** [Input Nama]\n",
-        "- **Email:** [Input Email]\n",
-        "- **ID Dicoding:** [Input Username]"
+        "- **Nama:** Sulusil Mutmainah\n",
+        "- **Email:** sulusil2710@gmail.com\n",
+        "- **ID Dicoding:** Sulusil_Mutmainah"
       ]
     },
     {
@@ -37,8 +37,9 @@
         "id": "GmQeQ5YF8DC0"
       },
       "source": [
-        "- Pertanyaan 1\n",
-        "- Pertanyaan 2"
+        "- Produk manakah yang paling banyak terjual? Dari produk yang terjual, apakah produk yang murah atau yang mahal mendapatkan keuntungan lebih banyak?\n",
+        "- Berapa rata-rata belanja pelanggan? menurut lokasi geografis apakah berbeda?\n",
+        "- Manakah pelanggan terbanyak jika diliat dari lokasi geografis?"
       ]
     },
     {
